# ForFun

./: .gitignore  .pre-commit-config.yaml  Hello.py  Makefile  README.md  enviroment.yml  kafka_consumer.py  kafka_producer.py  main.py  main_concurrency.py  main_coroutine.py  main_parallel.py  main_threading.py  pandas_101.py  playground.py  pyproject.toml  python_101.py  requirements.txt
ForFun/: lib_playground.py
my_lib/: containers.py
my_lib/utils/: utils.py
src/ForFun/: hello.py  lib_playground.py
tensorflow/: Course_3_Week_2_Exercise_Question.ipynb  Course_3_Week_2_Lesson_2.ipynb
test/: test_unittest.py
tests/: test_pytest.py  test_utils.py
